# stellarpay

./: .gitignore  PRD.md  README.md
.github/workflows/: ci.yml  deploy-contract.yml  deploy-frontend.yml
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs  test.rs  types.rs
frontend/: .env.example  index.html  package-lock.json  package.json  wrangler.toml
frontend/src/: App.jsx
frontend/src/components/: CashOutFlow.jsx  EmployerDashboard.jsx  ErrorFallback.jsx  Landing.jsx  Navbar.jsx  PayrollRunHistory.jsx  RunPayrollForm.jsx  WorkerDashboard.jsx  WorkerList.jsx
frontend/src/contexts/: WalletContext.jsx
frontend/src/hooks/: useContract.js  useWallet.js
frontend/src/lib/: constants.js  contractClient.js  sepHelpers.js  stellarClient.js
frontend/src/test/: cashOut.test.jsx  contractClient.test.jsx  errorFallback.test.jsx  payrollForm.test.jsx  responsive.test.jsx  useWallet.test.jsx
