[package]
name = "payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.6"
soroban-token-sdk = "22.0.6"

[dev-dependencies]
soroban-sdk = { version = "22.0.6", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
lto = true
debug = 0
strip = "symbols"
codegen-units = 1
panic = "abort"
